paylater-frontend/rbac.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: paylater-dev
