paylater-frontend/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: paylater-customer-service
  namespace: paylater-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: paylater-customer-service

  template:
    metadata:
      labels:
        app: paylater-customer-service

    spec:
      containers:
        - name: paylater-customer-service
          image: galinkivamshi/paylater-customer-service:2026.09.02-9307833
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8082

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 20
