paylater-frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: paylater-frontend
  namespace: paylater-dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: paylater-frontend

  template:
    metadata:
      labels:
        app: paylater-frontend

    spec:
      containers:
        - name: paylater-frontend
          image: galinkivamshi/paylater-frontend:2026.09.02-9307833
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
