paylater-frontend/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: paylater-api-gateway
  namespace: paylater-dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: paylater-api-gateway

  template:
    metadata:
      labels:
        app: paylater-api-gateway

    spec:
      containers:
        - name: paylater-api-gateway
          image: galinkivamshi/paylater-api-gateway:2026.09.02-9307833
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
