paylater-frontend/merchant-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: paylater-merchant-service
  namespace: paylater-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: paylater-merchant-service

  template:
    metadata:
      labels:
        app: paylater-merchant-service

    spec:
      containers:
        - name: paylater-merchant-service
          image: paylater-merchant-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8083

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 20
