paylater-frontend/payback-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: paylater-payback-service
  namespace: paylater-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: paylater-payback-service

  template:
    metadata:
      labels:
        app: paylater-payback-service

    spec:
      containers:
        - name: paylater-payback-service
          image: paylater-payback-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8085

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 10
            periodSeconds: 20
