paylater-frontend/customer-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: paylater-customer-service
  namespace: paylater-dev

spec:
  selector:
    app: paylater-customer-service

  ports:
    - port: 8082
      targetPort: 8082
