paylater-frontend/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: paylater-frontend-service
  namespace: paylater-dev

spec:
  type: NodePort

  selector:
    app: paylater-frontend

  ports:
    - port: 80
      targetPort: 80
