paylater-frontend/gateway-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: paylater-api-gateway-service
  namespace: paylater-dev

spec:
  selector:
    app: paylater-api-gateway

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
