paylater-frontend/identity-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: paylater-identity-service
  namespace: paylater-dev

spec:
  selector:
    app: paylater-identity-service

  ports:
    - port: 8081
      targetPort: 8081
