paylater-frontend/payback-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: paylater-payback-service
  namespace: paylater-dev

spec:
  selector:
    app: paylater-payback-service

  ports:
    - port: 8085
      targetPort: 8085
