paylater-frontend/gateway-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: paylater-api-gateway-network-policy
  namespace: paylater-dev

spec:
  podSelector:
    matchLabels:
      app: paylater-api-gateway

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080
